<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_12" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="82" id="KGk-i7-Jjw" customClass="TransactionTableViewCell" customModule="WorldOfPAYBACK" customModuleProvider="target">
            <rect key="frame" x="0.0" y="0.0" width="320" height="82"/>
            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                <rect key="frame" x="0.0" y="0.0" width="320" height="82"/>
                <autoresizingMask key="autoresizingMask"/>
                <subviews>
                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bcy-kX-dXn">
                        <rect key="frame" x="16" y="8" width="288" height="66"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="22 Jan 2023 . 7:07 AM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uyf-NS-pdv">
                                <rect key="frame" x="0.0" y="0.0" width="114" height="13.333333333333334"/>
                                <accessibility key="accessibilityConfiguration" label="dateLabel"/>
                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="11"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="top" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="usD-zG-5Qy">
                                <rect key="frame" x="0.0" y="21.333333333333332" width="99" height="37.666666666666671"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="REWE Group" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GLm-pc-LG4">
                                        <rect key="frame" x="0.0" y="0.0" width="89.333333333333329" height="18"/>
                                        <accessibility key="accessibilityConfiguration" label="partnerNameLabel"/>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Punkte sammeln" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nia-z5-akK">
                                        <rect key="frame" x="0.0" y="22.000000000000004" width="99" height="15.666666666666668"/>
                                        <accessibility key="accessibilityConfiguration" label="descLabel"/>
                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="13"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                            </stackView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PBP 1240" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6g2-Vs-OXO">
                                <rect key="frame" x="220" y="24" width="68" height="18"/>
                                <accessibility key="accessibilityConfiguration" label="amountLabel"/>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="usD-zG-5Qy" firstAttribute="top" secondItem="Uyf-NS-pdv" secondAttribute="bottom" constant="8" id="91r-JK-bu3"/>
                            <constraint firstAttribute="trailing" secondItem="6g2-Vs-OXO" secondAttribute="trailing" id="PKx-Ca-EU4"/>
                            <constraint firstAttribute="bottom" secondItem="usD-zG-5Qy" secondAttribute="bottom" constant="7" id="khr-ig-lQu"/>
                            <constraint firstItem="Uyf-NS-pdv" firstAttribute="leading" secondItem="Bcy-kX-dXn" secondAttribute="leading" id="o6G-lW-WnA"/>
                            <constraint firstItem="Uyf-NS-pdv" firstAttribute="top" secondItem="Bcy-kX-dXn" secondAttribute="top" id="wVg-lO-d9B"/>
                            <constraint firstItem="usD-zG-5Qy" firstAttribute="leading" secondItem="Uyf-NS-pdv" secondAttribute="leading" id="xgs-LF-Ytk"/>
                            <constraint firstItem="6g2-Vs-OXO" firstAttribute="centerY" secondItem="Bcy-kX-dXn" secondAttribute="centerY" id="zBR-Ah-02c"/>
                        </constraints>
                    </view>
                </subviews>
                <constraints>
                    <constraint firstItem="Bcy-kX-dXn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="6R8-D8-VBC"/>
                    <constraint firstAttribute="trailing" secondItem="Bcy-kX-dXn" secondAttribute="trailing" constant="16" id="gxR-Y1-Wjt"/>
                    <constraint firstAttribute="bottom" secondItem="Bcy-kX-dXn" secondAttribute="bottom" constant="8" id="gzj-CJ-2jT"/>
                    <constraint firstItem="Bcy-kX-dXn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="shv-Zd-cm6"/>
                </constraints>
            </tableViewCellContentView>
            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
            <inset key="separatorInset" minX="16" minY="0.0" maxX="16" maxY="0.0"/>
            <connections>
                <outlet property="amountLabel" destination="6g2-Vs-OXO" id="INt-pv-BE4"/>
                <outlet property="dateLabel" destination="Uyf-NS-pdv" id="Dpb-9a-AJS"/>
                <outlet property="partnerNameLabel" destination="GLm-pc-LG4" id="egj-PF-3ZB"/>
                <outlet property="transactionDescLabel" destination="Nia-z5-akK" id="P5B-fi-8Gi"/>
            </connections>
            <point key="canvasLocation" x="138.93129770992365" y="33.098591549295776"/>
        </tableViewCell>
    </objects>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
