...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="fSN-AV-FEN">
                                <rect key="frame" x="0.0" y="103" width="393" height="616"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="TransactionTable"/>
                                </userDefinedRuntimeAttributes>
                            </tableView>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="hd4-Np-wOw">
                                <rect key="frame" x="186.66666666666666" y="416" width="20" height="20"/>
                            </activityIndicatorView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hXB-dW-TFy">
...
                                    <constraint firstItem="WvJ-ig-a9K" firstAttribute="top" secondItem="hXB-dW-TFy" secondAttribute="top" id="wsm-7b-Nop"/>
                                </constraints>
                            </view>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="cYw-NS-vnQ"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" label="transactionsVC"/>
                        <constraints>
                            <constraint firstItem="cYw-NS-vnQ" firstAttribute="trailing" secondItem="fSN-AV-FEN" secondAttribute="trailing" id="0wG-z9-bKR"/>
                            <constraint firstItem="fSN-AV-FEN" firstAttribute="top" secondItem="cYw-NS-vnQ" secondAttribute="top" id="2un-jf-wQv"/>
                            <constraint firstItem="hXB-dW-TFy" firstAttribute="leading" secondItem="Nen-2t-fSX" secondAttribute="leading" id="8L4-tP-dF6"/>
                            <constraint firstItem="cYw-NS-vnQ" firstAttribute="trailing" secondItem="hXB-dW-TFy" secondAttribute="trailing" id="RjJ-Hb-Mw5"/>
                            <constraint firstItem="hd4-Np-wOw" firstAttribute="centerX" secondItem="Nen-2t-fSX" secondAttribute="centerX" id="Rng-kb-xZt"/>
...
            <point key="canvasLocation" x="-356" y="-7"/>
        </scene>
        <!--Transactions-->
        <scene sceneID="gEK-lJ-tZs">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="MKo-HW-1VS" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Transactions" image="icons8-receive-euro-64" id="U25-1a-yhB"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xFT-25-MtP">
                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
